Closed Bug 1878339 Opened 2 years ago Closed 2 years ago

Record the version of the profiles database on startup and the number of profiles in it

Categories

(Toolkit :: Startup and Profile System, defect)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox123 --- fixed
firefox124 --- fixed

People

(Reporter: mossop, Assigned: mossop)

References

Details

Attachments

(2 files)

No description provided.
Attachment #9377983 - Flags: data-review?(jhirsch)
Attachment #9377984 - Attachment description: WIP: Bug 1878339: Record the version of the profiles database on startup and the number of profiles in it → Bug 1878339: Record the version of the profiles database on startup and the number of profiles in it. r=jhirsch!

Comment on attachment 9377983 [details]
Data collection request

  1. Is there or will there be documentation that describes the schema for the ultimate data set in a public, complete, and accurate way?

Yes, the usual firefox data docs.

  1. Is there a control mechanism that allows the user to turn the data collection on and off?

Yes, the usual opt-out controls in about:preferences.

  1. If the request is for permanent data collection, is there someone who will monitor the data over time?

This is a temporary collection.

  1. Using the category system of data types on the Mozilla wiki, what collection type of data do the requested measurements fall under?

Category 2, interaction data.

  1. Is the data collection request for default-on or default-off?

Default-on.

  1. Does the instrumentation include the addition of any new identifiers

No.

  1. Is the data collection covered by the existing Firefox privacy notice? *

Yes.

  1. Does the data collection use a third-party collection tool?

No.

Attachment #9377983 - Flags: data-review?(jhirsch) → data-review+
Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0a89948ba0c0 Record the version of the profiles database on startup and the number of profiles in it. r=jhirsch
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch

Comment on attachment 9377984 [details]
Bug 1878339: Record the version of the profiles database on startup and the number of profiles in it. r=jhirsch!

Beta/Release Uplift Approval Request

  • User impact if declined: Low, but it will give us less insight to existing users for a new feature we are building.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The runtime code is minimal and safe
  • String changes made/needed: None
  • Is Android affected?: No
Attachment #9377984 - Flags: approval-mozilla-beta?

Comment on attachment 9377984 [details]
Bug 1878339: Record the version of the profiles database on startup and the number of profiles in it. r=jhirsch!

Approved for 123 beta 9, thanks.

Attachment #9377984 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: → 1916867
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: