Bug 1878339: Record the version of the profiles database on startup and the number of profiles in it. r=jhirsch

Differential Revision: https://phabricator.services.mozilla.com/D200471